--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
   <div id="app">
     <header></header>
     <nav>
-      <a href="#" class="nav-link" data-page="home">Home</a> | 
-      <a href="#" class="nav-link" data-page="categories">Categories</a> |
+      <a href="#" class="nav-link" data-page="home">Home</a>
+      <a href="#" class="nav-link" data-page="trending">Trending</a>
+      <a href="#" class="nav-link" data-page="uploaded">Uploaded</a>
       <a href="#" class="nav-link" data-page="favorites">Favorites</a>
-      <input id="search" type="text" placeholder="Search">
       <a href="#" class="nav-link" data-page="about">About</a>
+      <input id="search" type="text" placeholder="Search">
+      <button href="#" class="nav-link" data-page="upload">Upload</button>
     </nav>
     <div id="container">
       <!-- start placeholders -->
