--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <div id="app">
     <header></header>
     <nav>
+      <img src="/images/logo_gifinity_black-removebg-preview.png"/>
       <a href="#" class="nav-link" data-page="home">Home</a>
       <a href="#" class="nav-link" data-page="trending">Trending</a>
       <a href="#" class="nav-link" data-page="uploaded">Uploaded</a>
