--- a/index.html
+++ b/index.html
@@ -7,27 +7,31 @@
   <link rel="stylesheet" href="./styles/main.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css'>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500&display=swap">
 </head>
 <body>
   <div id="app">
     <header></header>
     <nav>
-      <img src="/images/logo_gifinity_black-removebg-preview.png"/>
+      <h1 id="logo-text">GIFFINITY</h1>
+      <!-- <img src="/images/logo_gifinity_black-removebg-preview.png"/> -->
       <a href="#" class="nav-link" data-page="home">Home</a>
       <a href="#" class="nav-link" data-page="trending">Trending</a>
       <a href="#" class="nav-link" data-page="uploaded">Uploaded</a>
       <a href="#" class="nav-link" data-page="favorites">Favorites</a>
       <a href="#" class="nav-link" data-page="about">About</a>
-      <input id="search" type="text" placeholder="Search">
       <button href="#" class="nav-link" data-page="upload">Upload</button>
+      <input id="search" type="text" placeholder="Search">
     </nav>
     <div id="container">
       <!-- start placeholders -->
 
       <!-- end placeholders -->
     </div>
-    <footer>Footer</footer>
   </div>
+  <footer>Created by Team 14</footer>
 
   <!-- app -->
   <script src="./src/index.js" type="module"></script>
