Bring back an important import

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <div id="app">
     <nav>
       <h1 id="logo-text">
-        PURRRPL
+        PURRRPL GIFS
         <img src="./images/tabby.png" id="hover_kitty" />
       </h1>
       <!-- <img src="/images/logo_gifinity_black-removebg-preview.png"/> -->
